# finance

./: .gitignore  .pre-commit-config.yaml  dev.docker-compose.yaml  docker-compose.yaml  run_dev.sh  run_test.sh
finance_backend/: .pre-commit-config.yaml  pyproject.toml  setup.cfg
finance_backend/app/: main.py
finance_backend/app/api/api_v1/: api.py
finance_backend/app/api/api_v1/endpoints/: account.py  category.py  proverka.py  transaction.py
finance_backend/app/core/: config.py
finance_backend/app/crud/: __init__.py  crud_account.py  crud_category.py  crud_transaction.py
finance_backend/app/db/: init_db.py
finance_backend/app/models/: accaunt.py  account.py  category.py  currency.py  transaction.py  type.py
finance_backend/app/schemas/: account.py  category.py  transaction.py
finance_backend/tests/: test_main.py
finance_bot/: pyproject.toml  run.sh
finance_bot/app/: config.py  create_bot.py  main.py
finance_bot/app/dialogs/: __init__.py
finance_bot/app/dialogs/create_account/: __init__.py  selected.py  states.py  windows.py
finance_bot/app/dialogs/create_category/: __init__.py  keyboards.py  selected.py  states.py  windows.py
finance_bot/app/dialogs/transaction/: __init__.py  getters.py  keyboards.py  selected.py  states.py  windows.py
finance_bot/app/handlers/: client.py  create_transaction.py
finance_bot/app/keyboards/: keyboard_start.py
finance_bot/app/templates/: balance.html
payment/: pyproject.toml
payment/app/: main.py
payment/app/api/: deps.py
payment/app/api/api_v1/: api.py
payment/app/schemas/: payment.py
(+71 files in other folders)
