[tool.poetry]
name = "finance-backend"
version = "0.1.0"
description = ""
authors = ["akalinin <am1kalinin@gmail.com>"]
readme = "README.md"
packages = [{include = "finance_backend"}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
